각 레이아웃에 해당하는 자바파일들 생성 및 화면 전환

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PagePreferEmptyActivity"/>
+        <activity android:name=".PagePreferExistActivity"/>
+        <activity android:name=".PageBucketEmptyActivity"/>
+        <activity android:name=".PageBucketExistActivity"/>
+        <activity android:name=".PagePlannerEmptyActivity"/>
+        <activity android:name=".PagePlannerExistActivity"/>
+        <activity android:name=".PageSearchActivity"/>
+        <activity android:name=".PagePlannerDetailActivity"/>
+        <activity android:name=".PageSightDetailActivity"/>
     </application>
 
 </manifest>
